update: dsa 22.md

--- a/dsa/contents/22.md
+++ b/dsa/contents/22.md
@@ -19,10 +19,11 @@
 - 我们大部分实现减而治之的方式就是递归，但是递归都会存在一些问题
     * 系统为了实现递归要维护很多栈的资源，当子任务不断往下递归下去的时候占用资源就会非常多，以至于"爆栈"
     * 使用递归的解决方案不能扩展的很大，总是局限在很小的范围来解决
-    * 几乎我们没有其他好的实现办法，只能借助递归
-- 在递归算法分析的时候，往往直接画出图来，就能知道哪个函数调用的谁，以至很方便的得到复杂度的估计
+    * 在这里几乎我们没有其他好的实现办法，只能借助递归
+- 在递归算法分析的时候，往往很难直接画出图来，就能知道哪个函数调用的谁，以至很方便的得到复杂度的估计
+- 解决办法是使用主定理
 
-### 主定理 Master Theorem
+### Master Theorem 主定理
 
 - 这时候评估递归算法的复杂度，我们需要以抽象对抽象，用方程或递推式来解决，如下
 
@@ -33,41 +34,47 @@
     <br />
 </div>
 
-- 我们经常写出如上的递推式，如：$T(n) = a \cdot T(n/b) + O(f(n))$
+- 我们经常写出如上的递推式，如：$T(n) = a \cdot T(n/b) + O(f(n))$ 
+    * 这个递推是是典型的分而治之的算法性能的描述
     * 分而治之，将规模为n的问题，分为了a个子问题，每个子问题的规模是 $n/b$
-    * O(f(n))表示divide任务的时间加上merge任务的时间，和n相关的函数f(n)
+    * O(f(n))表示divide任务的时间加上merge任务的时间，它是和n相关的函数f(n)
     * 大多数递推式通过挪项，配平等都可以算出来
-    * 递归一般有很多诀窍可以概括为 Master Theorem **主定理**
-        * 它告诉我们这一类的递推式 T(n)，以后只需要看这三个参数即可：a,b,f(n)
-        * a: 分出的每一个子任务的数目，一般是2
-        * b: $n/b$ 一般是subproblem 的 problem size， b 一般来说是2
-        * f(n): 分与和需要的时间
-        * a,b,f(n)总共三种大的情况，如上图所示
-        * 一般，我们将$a \cdot T(n/b)$构造出一个函数：$log_b a$
-          * 这里的b暗示的是取对数的基底: base
-        * 然后比较$n^{log_b a}$与$O(f(n))$之间的大小关系
-    * 上图表格第一排中$o(n^{log_b a})$，这里的o叫做Small-O，注意Big-O在英文中准确的叫法是Capital-O, Small-O和Big-O在本质上是一样的
-        * Big-O通常这样表示：$O(f(n))$
-            * 里面有一个函数f(n), 这个函数很简明，可以界定等号左边的函数, 它的波动趋势是由这个f(n)来描述的
-            * 它会形成一个上界，可以有这样一个公式：$T(n) = O(f(n))$, 直观一些，可以把等号和Big-O去掉，即：
-            * $T(n) \leq c \cdot f(n)$, 可以认为f(n)就是T(n)的一个上界
-            * o与O的区别就在于这个等号，如果是Big-O，就是 $\leq$, 如果是small-o，就是 $<$
-        * 这里f(n)是$o(n^{log_b a})$的意思是：$f(n) < o(n^{log_b a})$, 这时候算法的复杂度主要由更大的一项$o(n^{log_b a})$表示
-        * 即：$T(n) = \Theta(n^{log_b a})$
+
+- 评估递归算法效率的诀窍可以概括为 Master Theorem **主定理**
+	* 它告诉我们这一类的递推式 T(n)，以后只需要看这三个参数即可：a, b, f(n)
+     * a: 分出的每一个子任务的数目，一般是2
+     * b: $n/b$ 一般是subproblem 的 problem size， b一般来说也是2
+     * f(n): 用于计算分与和需要的时间
+
+- a, b, f(n) 总共三种大的情况，如上图所示
+     * 一般，我们需要将 $a \cdot T(n/b)$ 构造出一个函数：$log_b a$
+     * 这里的b暗示的是取对数的基底: base
+     * 三种情况取决于 $n^{log_b a}$ 与 $f(n)$ 之间的大小关系
+    * 情况一：上图表格第一排
+        * 在 $o(n^{log_b a})$ 这里的 o 叫做Small-O，注意Big-O在英文中准确的叫法是Capital-O, Small-O和Big-O在本质上是一样的，Big-O通常这样表示：$O(f(n))$
+        * Big-O里面有一个函数f(n), 这个函数很简明，可以界定等号左边的函数,  它的波动趋势是由这个f(n)来描述的
+        * 也就是说它会形成一个上界，可以有这样一个公式：$T(n) = O(f(n))$, 直观一些，可以把等号和Big-O去掉，代之以 $\leq$ ，即： $T(n) \leq c \cdot f(n)$,  c是常数可以忽略, 这时可以认为f(n)就是T(n)的一个上界
+        * o与O的区别就在于这个等号，如果是Big-O，就是 $\leq$, 如果是small-o，就是 $<$
+        * 这里 $o(n^{log_b a})$ 的意思是：$f(n) < n^{log_b a}$, 这时候算法的复杂度主要由更大的一项 $n^{log_b a}$ 表示, 即：$T(n) = \Theta(n^{log_b a})$ , 这里的 $\Theta$ 是严格的 "等于"
         * 举个例子：$T(n) = 2 \cdot T(n/4) + O(1) = O(\sqrt{n})$
-            * 在求解一个规模为n的问题的时候，把它拆分为2部分，每一部分的规模可以缩小到n/4而非n/2，为此只需要花O(1)的时间
+            * 在求解一个规模为n的问题的时候，把它拆分为2部分，每一部分的规模可以缩小到n/4而非n/2，为此只需要花O(1)常数的时间
             * 这时候我们有：$n^{log_4 2} = n^{\frac{1}{2}} = \sqrt{n}$
             * 典型的代表就是： kd-tree
-    * 上图表格第二排是另一种情况，是严格的等于，它的标记是 $\Theta$
-        * 这时候，$f(n) = \Theta(n^{c})$
-        * 此时，$T(n) = \Theta(n^{log_b a}) \cdot log n$, 注意后面一定要乘上一个logn
-        * 举个例子
-            * $T(n) = 1 \cdot T(n/2) + O(1) = O(log n)$
-            * 在二分查找的例子中，求解一个规模为n的问题，在n个元素中去搜索，我们会经过1次时间的比较, 舍弃左边或右边的一半
-            * 把问题转换为规模为n/2的问题，这时候有，$log_2 1 = 0$，此时 $n^{log_2 1} = 1$, 此时，$T(n) = logn$
-    * 上图表格第三排又是另一种情况，为了完成减而治之需要做的分与合的工作量非常大，以至于 $f(n) > n^{log_b a}$
-        * 这时候，$f(n) = \omega(n^{log_b a})$，此时，$T(n) = \Theta(f(n))$
-    * 综上所述，以上都是基于一种比较，大就留下来，小就离开，如果相等的时候，要再乘上一个logn
+    * 情况二：上图表格第二排
+        * 这是另一种情况，严格的等于，它的标记是 $\Theta$
+        * 这时候，$f(n) = n^{log_b a}$ , 此时，$T(n) = \Theta(n^{log_b a} \cdot log n)$ 
+        * 注意上式后面一定要乘上一个 $logn$
+        * 举个例子：$T(n) = 1 \cdot T(n/2) + O(1) = O(log n)$
+            * 在二分查找的例子中，求解一个规模为n的问题，在n个元素中去搜索
+            * 把问题转换为规模为n/2的问题, 没有拆分子任务，此时 a=1, b=2
+            * 我们会经过1次时间的比较, 舍弃左边或右边的一半
+            * 这时候有，$log_2 1 = 0$，$n^{log_2 1} = n^0 = 1$
+            * 此时，$T(n) = 1 * logn = logn$
+    * 情况三：上图表格第三排
+         * 这里又是另一种情况，大于的情况, 它的标记是 $\omega$
+         * 为了完成减而治之需要做的分与合的工作量非常大，以至于 $f(n) > n^{log_b a}$
+        * 此时，$T(n) = \Theta(f(n))$
+    * 综上所述，以上都是基于$n^{log_b a}$ 与 $f(n)$ 大小的比较，大就留下来，小就离开，如果相等的时候，要再乘上一个logn
 
 ### Greatest Slice
 
@@ -358,7 +365,7 @@ int gs_IC(int A[], int n) {
 
 - 最终merge的技巧是Mergesort实质的技巧，用到了二路归并(2-Way Merge)的算法
 
-**2-Way Merge**
+**2-Way Merge 二路归并**
 
 <div align="center">
     <img width="600" src="./screenshot/136.jpg">
@@ -380,6 +387,6 @@ int gs_IC(int A[], int n) {
 - 其实，mergesort非常的有名，是历史上第一个达到O(nlogn)效率的算法
 - 在大数据处理方面，内存不容易操作的时候是一个非常好的算法
 - 这个算法背后的哲学依然是分而治之，准确来讲，就是把它分为两个规模相当的任务
-- 而且诀窍是无论分还是合，都能够在颇为有效的这个算法以内完成
+- 而且诀窍是无论分还是合，都能够在颇为有效的算法以内完成
 
 ### 未完 待续
