update: dsa 22.md

--- a/dsa/contents/22.md
+++ b/dsa/contents/22.md
@@ -1,4 +1,4 @@
-### 分而治之 divide and conquer 概述
+### Divide and Conquer 分而治之概述
 
 - 分而治之，就像是团队合作，将一项工作分解成不同的成员去处理
 
@@ -35,7 +35,7 @@
 </div>
 
 - 我们经常写出如上的递推式，如：$T(n) = a \cdot T(n/b) + O(f(n))$ 
-    * 这个递推是是典型的分而治之的算法性能的描述
+    * 这个递推式是典型的分而治之的算法性能的描述
     * 分而治之，将规模为n的问题，分为了a个子问题，每个子问题的规模是 $n/b$
     * O(f(n))表示divide任务的时间加上merge任务的时间，它是和n相关的函数f(n)
     * 大多数递推式通过挪项，配平等都可以算出来
@@ -50,7 +50,7 @@
      * 一般，我们需要将 $a \cdot T(n/b)$ 构造出一个函数：$log_b a$
      * 这里的b暗示的是取对数的基底: base
      * 三种情况取决于 $n^{log_b a}$ 与 $f(n)$ 之间的大小关系
-    * 情况一：上图表格第一排
+     * 情况一：上图表格第一排
         * 在 $o(n^{log_b a})$ 这里的 o 叫做Small-O，注意Big-O在英文中准确的叫法是Capital-O, Small-O和Big-O在本质上是一样的，Big-O通常这样表示：$O(f(n))$
         * Big-O里面有一个函数f(n), 这个函数很简明，可以界定等号左边的函数,  它的波动趋势是由这个f(n)来描述的
         * 也就是说它会形成一个上界，可以有这样一个公式：$T(n) = O(f(n))$, 直观一些，可以把等号和Big-O去掉，代之以 $\leq$ ，即： $T(n) \leq c \cdot f(n)$,  c是常数可以忽略, 这时可以认为f(n)就是T(n)的一个上界
@@ -60,21 +60,22 @@
             * 在求解一个规模为n的问题的时候，把它拆分为2部分，每一部分的规模可以缩小到n/4而非n/2，为此只需要花O(1)常数的时间
             * 这时候我们有：$n^{log_4 2} = n^{\frac{1}{2}} = \sqrt{n}$
             * 典型的代表就是： kd-tree
-    * 情况二：上图表格第二排
+     * 情况二：上图表格第二排
         * 这是另一种情况，严格的等于，它的标记是 $\Theta$
         * 这时候，$f(n) = n^{log_b a}$ , 此时，$T(n) = \Theta(n^{log_b a} \cdot log n)$ 
         * 注意上式后面一定要乘上一个 $logn$
         * 举个例子：$T(n) = 1 \cdot T(n/2) + O(1) = O(log n)$
             * 在二分查找的例子中，求解一个规模为n的问题，在n个元素中去搜索
-            * 把问题转换为规模为n/2的问题, 没有拆分子任务，此时 a=1, b=2
-            * 我们会经过1次时间的比较, 舍弃左边或右边的一半
-            * 这时候有，$log_2 1 = 0$，$n^{log_2 1} = n^0 = 1$
+            * 把问题转换为规模为n/2的问题, 经过1次时间的比较, 舍弃左边或右边的一半
+            * 注意这里我们没有没有拆分子任务而是直接舍弃其中的一半，此时 a=1, b=2
+            * 这时候有：$log_2 1 = 0$，$n^{log_2 1} = n^0 = 1$
             * 此时，$T(n) = 1 * logn = logn$
-    * 情况三：上图表格第三排
+     * 情况三：上图表格第三排
          * 这里又是另一种情况，大于的情况, 它的标记是 $\omega$
          * 为了完成减而治之需要做的分与合的工作量非常大，以至于 $f(n) > n^{log_b a}$
-        * 此时，$T(n) = \Theta(f(n))$
-    * 综上所述，以上都是基于$n^{log_b a}$ 与 $f(n)$ 大小的比较，大就留下来，小就离开，如果相等的时候，要再乘上一个logn
+         * 此时，$T(n) = \Theta(f(n))$
+
+- 综上所述，以上都是基于$n^{log_b a}$ 与 $f(n)$ 大小的比较，大就留下来，小就离开，如果相等的时候，要再乘上一个logn
 
 ### Greatest Slice
 
@@ -84,8 +85,8 @@
 - slice 是统计学中的一个概念，有一个统计的对象叫做squence序列，如这个整数的序列，有正有负，可能还是零
 - 所谓的slice就是切片，是这个序列中连续的一段，只要一个序列给出后，中间任何连续的一段都是一个slice
 - 如果这个序列是由一系列的整数构成，我们就可以为这个序列每一个slice赋予一个整数的指标
-- 这个指标就是这个slice所涵盖的整数项的总和，每一个slice中所涵盖的整数项的总和，我们就称为是这个slice的指标
-- Greatest Slice 就是找到所有slice中总和最大的指标
+- 这个指标就是这个slice所涵盖的整数项的总和，即每一个slice中所涵盖的整数项的总和，就称为这个slice的指标
+- Greatest Slice 问题就是找到所有slice中总和最大的指标
 - 举一个在商业中的例子：某一个序列可能是一家企业在一段时间经营的盈亏数据
     * 正的表示受益，负数表示亏空，0表示盈亏平衡
     * 需要知道在历史上哪段时间表现的是比较好的，在这个过程中受益达到最大
