update: dsa 22.md

--- a/dsa/contents/22.md
+++ b/dsa/contents/22.md
@@ -389,5 +389,60 @@ int gs_IC(int A[], int n) {
 - 在大数据处理方面，内存不容易操作的时候是一个非常好的算法
 - 这个算法背后的哲学依然是分而治之，准确来讲，就是把它分为两个规模相当的任务
 - 而且诀窍是无论分还是合，都能够在颇为有效的算法以内完成
+- 在这里回顾一下选择排序和插入排序
+    * 选择排序
+      * 算法思想是：把一个序列分成2部分，一部分是有序的，一部分是无序的, 在无序中找到最大的元素存入有序中，通过这种方式来迭代
+      * 选择排序有n步迭代，每次迭代都要把无序走一遍才能确定最大元素，平均来说是n/2的距离，总体来说是$O(n^2)$
+      * 效率上没有好的情况，不管是输入元素是怎样的
+    * 插入排序
+      * 算法思想是：把一个序列分成2部分，一部分是有序的，一部分是无序的, 把无序的顶端元素在有序列中找到合适的位置并插入，通过这种方式来迭代
+      * 插入排序有好的情况，比如给定序列都是顺序的，在找合适位置的时候，只需要在有序列中的后面直接插入即可，即查找位置的时间是O(1)
+      * 这样来说插入排序最好的效率是O(n), 即线性的
+    * 再谈逆序对(inversion)
+      * 在完全有序的序列中, 逆序对的对数是0
+      * 在无序的序列中，逆序对的对数至少是一对
+      * 在任何一个无序的序列中，逆序对是有数目的，一般记做 I
+      * 逆序对的多少直接反应了序列的混乱程度，直接决定排序算法的性能
+      * 逆序对作为形象算法性能的"锅", 但这口"锅"是由两个元素造成的
+      * 一般习惯性的只记在后面元素的账上(比如我们从小到大排列, 记在逆序对中较小的元素身上)
+      * 任何元素有多少口"锅"，取决于在它的前面(左边)有多少元素比它大
+      * 如果这个元素为k号元素,那么它的"锅"(也就是逆序对)一般我们记为有i(k)个
+      * 把所有元素的"锅"做一个总和，记为$\sum_k i(k)$, 即 $I = \sum_k i(k)$
+      * 其实第k个元素的"锅"数量可以直接作为度量k元素排序的时间成本
+      * 这个时间成本，比如，在插入排序中，把第k个元素插入的时间成本，也就是把当前k元素插入后需要移动的元素个数
+      * 所以可以知道插入排序的时间复杂度其实也可以表示为：O(n + I)
+      * 同时，我们知道了插入排序的性能和输入序列是相关的(也就是越有序排序越快，越无序排序越慢)
+      * 这个性质我们称为"输入敏感性"(input sensitivity), 只有很少的算法有这个性质
+      * 这时候，我们很有必要思考一下如何通过分而治之来高效实现统计一个序列中的逆序对的个数I了
 
-### 未完 待续
+**计算逆序对的个数 Counting Inversions**
+
+<div align="center">
+    <img width="600" src="./screenshot/137.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 我们可以把这样一件事分给两个任务来做，将序列一分为二, 每个任务(subproblem)各自统计各自的I，可以分别记为$I_L$, $I_R$
+- 之后还要统计跨越两部分的逆序对，即$I_M$, 我们可知，有$I = I_L + I_R + I_M$
+- 现在我们需要知道如何计算这个跨域两部分的$I_M$
+    * 如下图所示，两个梯形结构, 蓝色和粉红色的
+    * 我们需要使用归并算法来计算，这里我们还是选择二路归并算法
+    * 将一个有序的序列和另一个对等的有序序列合二为一
+    * 每次把目光注意在头上，总是把最小的元素摘走，然后扫描下一个
+    * 不失一般性，比如扫描到了右边(粉色梯形)的e元素, 这个元素要
+    * 蓝色区域的LL其实已经被归并出去了, 剩下的只有LR(是蓝色梯队残余的元素)
+    * 如果粉色梯队中的e元素编号是k, 那么LR的数量就是i(k), 也就是粉色区域e元素的逆序对数量
+    * 我们只需要把目光盯住一侧，比如右侧(粉红梯队)，右侧任意元素要出队，要被归并的时候
+    * 同时用眼睛观察下它的左边剩下多少元素(也就是蓝色梯队的LR部分)，也就是它的逆序对的个数
+    * 把所有元素的"锅"一个个的累计起来就会得到我们的$I$, 也就是$I = \sum_k i(k)$
+    * 这样我们就可以直接使用i(k)来统计，而非一个一个逆序对的统计，所以会统计的更快
+    * 也就是说最多的时候有$n^2$的逆序对，我们所需的时间不会超过O(nlogn)
+
+<div align="center">
+    <img width="600" src="./screenshot/138.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
