update: dsa 22.md

--- a/dsa/contents/22.md
+++ b/dsa/contents/22.md
@@ -502,3 +502,72 @@ int gs_IC(int A[], int n) {
     }
     ```
 - 可见此算法时间复杂度是O(n), 是线性的, 此算法是减而治之，而非分而治之，作为本文的扩展
+
+### linearSelect(A, k) 线性查找
+
+- 问题描述：从一个数组A中找到第k大的元素，回避排序，一旦排序时间成本就会爆掉
+- 一般针对这个问题我们可以通过快排来做，通过猜测，平均和最好情况下，可以达到线性
+- 但是这个linearSelect是名副其实的线性算法，即使在最坏的情况
+- 这个个问题比较复杂，属于分而治之，也是减而治之，通过线性的时间来找到第k大的元素
+- 这个算法实际上很深奥
+    * 选择一个较小的数Q作为常量，一般Q推荐是5，这个算法是用递归来处理的
+    * 既然是递归，首先要判断终结条件，也就是什么时候不再递归
+        * 如果一个n足够小，比这个Q还要小，那么这时候就是一个trivial case, 不用再折腾了, 直接从这里找第k大的元素即可
+        * 用伪代码表示为：`if(n = |A| < Q) return trivialSelect(A,k)`
+    * 现在，我们来处理这个递归机一般的情况了
+        * 1 ) 把A均分为$\frac{n}{Q}$等份, 可知，总量是n, 每一份的大小是Q, 这个任务线性时间即可完成
+        * 接下来我们得到了$\frac{n}{Q}$份的"香肠", 因为每一份香肠已经很小了，大小为Q个元素
+        * 2 ) 这时候可以很快的对其排序(基本认为排序时间为常数，可以使用插入排序)，找到每份香肠的中位数m
+        * 3 ) 在$\frac{n}{Q}$份"香肠"中, 每一份都会有一个m, 我们可以得到由m组成的一个新的序列
+        * 在这个新的序列中，找到其中位数M(通过递归机自己调用自己来找), 也就是中位数中的中位数，这个M可以认为是总体的中位数
+        * 这个M是一个很好的中位数，因为通过上述方式来查找的这个M会更接近真实的中位数，具有更高的似然性，在复杂度上也会得到更好的收获
+        * 4 ) 接下来进行分类，根据M把所有元素分为三类，L表示较小的, E表示相等的, G表示较大的, 线性扫描即可分为三类
+        * 用伪代码表示为：$Let \ L \ /\  E \ /\  G = \{ x < / = / > M \ | \  x \in A\}$
+        * 这三类内部不需要排序，但是总体上是有序的，即：L < E < G
+        * 5 ) 我们最终的问题是要寻找第k大的元素，这时候就会与运气有关了，这时候第k大的元素可能会在L、E、G不同的范围之内
+        * 如果k在E中，那么就找到了该元素，直接return即可
+        * 如果k在L中，E和G都应该被减去，直接在L中递归查找第k大的元素
+        * 如果k在G中，E和L都应该被减去，直接在G中递归查找第k大的元素
+        * 用伪代码表示为
+            * `if(k <= |L|) return linearSelect(L, k)`
+            * `if(k <= |L| + |E|) return M`
+            * `return linearSelect(G, k - |L| - |E|)`
+
+<div align="center">
+    <img width="400" src="./screenshot/140.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 在上面算法中, 有两次重要的递归，第一次是找全局中位数的，第二次是在L和G中继续查找的
+- 其中查找中位数只用了线性的时间，即 O(n/Q), 而在L和G中继续查找所需要的时间不会超过 O(3n/4)
+- 也就是说第二次递归的时间复杂度不会超过总体的75%，为什么呢?
+    * 这与M有直接的关系，因为这个M的得出，我们是付出了一定的努力的，得到的这个M是一个有利于计算的M
+    * 我们可以把所有的m序列作为一个糖葫芦串一样，每一个m都将之前的"香肠"段均分，上下各一半
+    * 基于最中间的M, 我们可以把整个序列分成4等份：蓝色，绿色和2份的黄色
+    * 根据大小的传递性，比M要大的m所对应的"香肠"段会被标记成蓝色，比M要小的m所对应的"香肠"段会被标记成绿色
+    * 而黄色部分是不确定的，可能是黄色，绿色和蓝色，这个说不准，但是这个不重要，我们已经找到蓝色和绿色的必要部分了
+    * 我们知道，蓝色和绿色各占总体的1/4, 当我们递归要减除蓝色或绿色的时候，至少要减掉整体的1/4
+        * 表示为：`min(|L|, |G|) + |E| >= n / 4`
+    * 而反过来，我们可知，剩下的最多留下3/4
+        * 可以表示为：`max(|L|, |G|) <= 3n / 4`
+- 这样，主定理递推式可写为：`T(n) = c · n + T(n/Q) + T(3n/4)`
+    * 整个算法经历了一大堆的线性操作(花费T(c · n))之后，把这个问题分为了两个部分
+    * 一部分是求解这个M, 花费T(n/Q)
+    * 另一部分是减而治之的递归任务，花费T(3n/4)
+    * 如果后面两部分的时间复杂度加起来不足T(n), 那么这个算法的时间复杂度由前面的线性操作决定
+    * 这个时候，整体算法就是线性的，就是我们所说的`linearSelect`
+    * 那么如何使得后面两部分的时间复杂度加起来不足T(n)呢?
+        * 我们知道 n/Q + 3n/4 < n 即可满足条件，即：1/Q + 3/4 < 1
+        * 这个时候，我们知道Q最小的时候，取值为5
+- 把话说回来，虽然这个算法在性能上标称的很好，但是现实上只具备理论意义
+- 因为其线性操作的常系数c是非常大的，一般表示为：`c >> 2`
+- 在实际中，我们还是使用快速排序来完成任务
+
+<div align="center">
+    <img width="300" src="./screenshot/141.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
