update: dsa 22.md

--- a/dsa/contents/22.md
+++ b/dsa/contents/22.md
@@ -418,7 +418,7 @@ int gs_IC(int A[], int n) {
 **计算逆序对的个数 Counting Inversions**
 
 <div align="center">
-    <img width="600" src="./screenshot/137.jpg">
+    <img width="500" src="./screenshot/137.jpg">
     <br />
     <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
     <br />
@@ -441,7 +441,7 @@ int gs_IC(int A[], int n) {
     * 也就是说最多的时候有$n^2$的逆序对，我们所需的时间不会超过O(nlogn)
 
 <div align="center">
-    <img width="600" src="./screenshot/138.jpg">
+    <img width="500" src="./screenshot/138.jpg">
     <br />
     <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
     <br />
@@ -567,6 +567,91 @@ int gs_IC(int A[], int n) {
 
 <div align="center">
     <img width="300" src="./screenshot/141.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+### Diameter of A Binary Tree 二叉树直径
+
+- 所谓直径，在一般的图中都可以定义为一个直径, 即在一个图中能够找到的**最长的路径**
+
+<div align="center">
+    <img width="300" src="./screenshot/142.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 如上图所示，绿色路径即为该图的直径
+- 我们一般研究二叉树的直径，二叉树也是图，我们怎么对二叉树求解直径问题进行分而治之呢?
+- 我们问题的解决模式是立足于某个局部或者包括全局的一个树根，以x为根的范围内，找到直径
+- 既然是二叉树，我们就会想到分而治之，我们会理所当然的想到在左孩子和右孩子分别递归找到其内部最大的直径
+- 其实它分为三种情况
+    * 最大直径只存在于左孩子树中
+    * 最大直径只存在于右孩子树中
+    * 最大直径贯穿左右孩子树
+        * 这时候需要计算左孩子最深的叶子
+        * 计算右孩子最深的叶子
+        * 以及根节点x连接左右孩子的路径，长度为2
+- 我们需要在这三类中找到最长的直径
+- 根据以上分析，我们可以得到以x为根节点的二叉树直径的计算公式
+    * `diam(x) = max{diam(x.lc), diam(x.rc), height(x.lc) + height(x.rc) + 2}`
+    * `diam(NULL) = -1`
+
+<div align="center">
+    <img width="400" src="./screenshot/143.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+### Closest Pair 最近邻问题
+
+- 最近邻问题是计算几何很经典的一个问题
+- Closest Pair 也可以叫做 Nearest Neighbor
+- 问题描述：平面上给定一些点, 问哪两个点的欧式距离最近
+
+<div align="center">
+    <img width="400" src="./screenshot/144.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 一般如果使用蛮力算法，对每一个点进行组合，找到距离最近的点
+- 因为n个点的两两组合的时间复杂度是$O(n^2)$, 我们不应该考虑这种算法
+- 那么如何通过分而治之来解决这个问题呢?
+- 我们可以在平面上找一个中间点，将这个平面锯成两半
+- 也可以认为把所有的点分成了左右两半，分别记为：nn(L), nn(R)
+- 这两半分别递归找到各自的最近点对，还要做的工作是找到跨越两部分的最近点对
+- 取左、右、以及横跨两部分这三个中距离最近的点对为最终答案
+- 这里最复杂的问题是如何找到跨越两部分的最近点对
+    * 如果为了解决这个问题而考虑左边n/2个点，以及右边的n/2个点，那么又会回到了$O(n^2)$
+    * 其实，算法中有一个Brand-and-Bound(分支定界)的策略, 这是在搜索时候的一种策略
+    * 在搜索过程中，会得到一些辅助信息，这些信息对候选者的筛选会有一定的收敛
+    * 从而能够更优，从而花上更少的时间
+    * 我们已经找到左右两部分中的最近点对，分别记为$\delta_L$,$\delta_R$, 从中取最小的点对，记为$\delta$
+    * 在跨越两部分的计算中，我们只需要找离锯齿红线距离为$\delta$的点即可，因为其他点一定不是我们想要的最近点对
+    * 为什么不是$\frac{\delta}{2}$, 而是$\delta$，因为有一些点可能就落在锯齿红线处，而非灰色区域的边界
+    * 所以，如果使用$\frac{\delta}{2}$，那么灰色条带就是$\delta$的宽度，可能会有一些点会被漏掉
+    * 由此，我们设置灰色条带为$2\delta$的宽度，这样更加严谨，这一点很好懂
+    * 现在，我们就需要计算灰色条带内的最近点对了，那么如何计算呢?
+    * 在确定好横向上的范围之后，我们要考虑纵向上的取值范围，其纵向可以做成一个8段管，每一段的长度都为$\delta$
+    * 同样是分支定界，那些符合条件的最近点对，一定在这个8段管的范围之内
+    * 而在这8段管内两两点之间的距离不会少于$\delta$，因为之前算过左右两部分最近点对的距离就是$\delta$
+    * 这时候，我们知道在8段管内，有意义的点最多不会超过6个，如下图所示，这6个点作为一个window
+    * 最后是如何计算的问题了，其实我们可以给在锯齿红线左侧的灰色条带内的点做一个排序，每个点都会有这么一个window
+    * 我们只需要移动窗口，这个过程和2-way-merge非常相似，在移动的过程中，一些点进入window, 一些点离开window
+    * 单个window对比过程规模不会超过6，整个对比规模就可以做到线性了
+    * 现在我们计算下它的时间复杂度
+        * 蛮力算法的时间复杂度是：$\frac{n}{2} * \frac{n}{2} = O(n^2)$
+        * 分而治之时间复杂度的计算
+            * $\frac{n}{2} * 6 = O(n)$
+            * $T(n) = 2 * T(\frac{n}{2}) + O(n) = O(nlogn)$
+
+<div align="center">
+    <img width="400" src="./screenshot/145.jpg">
     <br />
     <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
     <br />
