update: dsa 22.md

--- a/dsa/contents/22.md
+++ b/dsa/contents/22.md
@@ -642,7 +642,7 @@ int gs_IC(int A[], int n) {
     * 而在这8段管内两两点之间的距离不会少于$\delta$，因为之前算过左右两部分最近点对的距离就是$\delta$
     * 这时候，我们知道在8段管内，有意义的点最多不会超过6个，如下图所示，这6个点作为一个window
     * 最后是如何计算的问题了，其实我们可以给在锯齿红线左侧的灰色条带内的点做一个排序，每个点都会有这么一个window
-    * 我们只需要移动窗口，这个过程和2-way-merge非常相似，在移动的过程中，一些点进入window, 一些点离开window
+    * 我们只需要移动窗口，这个过程和2-Way Merge非常相似，在移动的过程中，一些点进入window, 一些点离开window
     * 单个window对比过程规模不会超过6，整个对比规模就可以做到线性了
     * 现在我们计算下它的时间复杂度
         * 蛮力算法的时间复杂度是：$\frac{n}{2} * \frac{n}{2} = O(n^2)$
