update: dsa 20,22.md

--- a/dsa/contents/20.md
+++ b/dsa/contents/20.md
@@ -234,3 +234,59 @@
         if(i <= k) lo = i + 1;
     } // A[k] is now a pivot
     ```
+
+**Majority 查找众数**
+
+- 在集合中若有一半以上元素同为m, 则称之为**众数**，或者叫做主流数
+- 在统计学中专门有一个叫Mod,来表示众数
+- 举个例子来看一下
+    * 在整数集合{3,5,2,3,3}中，众数为3
+    * 在整数集合{3,5,2,3,3,0}中，却没有众数
+    * 一定要强调的是**一半以上**元素，不包含一半
+- 如何求一个序列中的众数呢
+    * 如果数值范围不是很大的话，可以选择使用哈希表，但是如果无法确定数值范围，那么也不适合用哈希表
+    * 一般我们还是推荐使用减而治之来求解
+
+<div align="center">
+    <img width="600" src="./screenshot/139.jpg">
+    <br />
+    <div style="text-align:center">备注：图片托管于github，请确保网络的可访问性</div>
+    <br />
+</div>
+
+- 如上图所示，我们在A的范围来找众数, 我们希望，在慢慢搜索的过程中
+- 在某些情况下，有一部分集合{P}(prefix暗示前缀), 可以被切下来
+- 之后在与其互补的后缀集合{A-P}中找到的众数与之前A中的众数是一样的
+- 验证也非常简单，只需要花O(n)的时间遍历一次集合{A}, 验证集合{A-P}中找到的众数是否在A中有一半以上即可
+    * 如果通过，那么就找到了众数
+    * 如果不通过，那么集合A中就没有众数
+- 现在我们需要知道如何将集合P来减掉
+    * 我们认定集合A中的第一个元素为众数的候选者, 可能是众数，也可能不是，我们把它姑且当做众数记为m
+    * 用变量c作为m的计数器，其初始值为1, 每遇到了一次m, c就自增一次，没有遇到就自减一次
+    * 那么什么时候，我们做一次减法呢? 其实m的图像可以画出来，理论上是一个以次数为x轴，以当前c的值为y轴的折线图
+    * 当这个折线图触底的时候，这时候就可以把它给减下来，剩下的集合中的众数不会影响整体的众数取值
+    * 这个原理是什么？我们来解释一下
+        * 第一个元素m无非有两种可能, 是众数或者不是众数
+        * 1 ) 如果是众数，当c值为0的时候，我们可知，m的个数(number of m, 用nm表示)为当前P总数的一半，也即是：$nm = \frac{|P|}{2}$
+        * 在此时做减除，也就是从整体集合A中减去集合P(集合P是众数(这里用PM表示)占一半，非众数(这里用PO表示)占一半)
+        * 即：$P = PM + PO, A - P = A - PM - PO$
+        * 我们用数学的方法来说明：$\frac{1}{2} < \frac{M}{N} < \frac{M-nm}{N-2nm}$
+        * 在这里M表示A的众数的个数，N表示总数
+        * 换个角度来说就是在做减法之后，经过通分，分母相同时，分子变得更大(众数会更多)，所以不会影响之前众数的取值
+        * 2 ) 如果不是众数，当c值为0的时候, 同样使用数学来说明，$\frac{1}{2} < \frac{M}{N} < \frac{M}{N-2nm}$
+        * 这个时候可知，分子不变，分母变小了，众数比重变得更多了，当然更不会影响之前众数的取值
+        * 所以，这种算法是可行的
+- 关键算法如下
+    ```cpp
+    template <typename T> T majCandidate(Vector<T> A) {
+        T maj;
+        for (int c=0, i=0; i < A.size(); i++)
+            if (0 == c) {
+                maj = A[j];
+                c = 1;
+            } else
+                maj == A[j] ? c++ : c--;
+        return maj;
+    }
+    ```
+- 可见此算法时间复杂度是O(n), 是线性的
