update: dsa 22.md

--- a/dsa/contents/22.md
+++ b/dsa/contents/22.md
@@ -54,7 +54,7 @@
         * 在 $o(n^{log_b a})$ 这里的 o 叫做Small-O，注意Big-O在英文中准确的叫法是Capital-O, Small-O和Big-O在本质上是一样的，Big-O通常这样表示：$O(f(n))$
         * Big-O里面有一个函数f(n), 这个函数很简明，可以界定等号左边的函数,  它的波动趋势是由这个f(n)来描述的
         * 也就是说它会形成一个上界，可以有这样一个公式：$T(n) = O(f(n))$, 直观一些，可以把等号和Big-O去掉，代之以 $\leq$ ，即： $T(n) \leq c \cdot f(n)$,  c是常数可以忽略, 这时可以认为f(n)就是T(n)的一个上界
-        * o与O的区别就在于这个等号，如果是Big-O，就是 $\leq$, 如果是small-o，就是 $<$
+        * o与O的区别就在于这个等号，如果是Big-O，就是 $\leq$, 如果是Small-O，就是 $<$
         * 这里 $o(n^{log_b a})$ 的意思是：$f(n) < n^{log_b a}$, 这时候算法的复杂度主要由更大的一项 $n^{log_b a}$ 表示, 即：$T(n) = \Theta(n^{log_b a})$ , 这里的 $\Theta$ 是严格的 "等于"
         * 举个例子：$T(n) = 2 \cdot T(n/4) + O(1) = O(\sqrt{n})$
             * 在求解一个规模为n的问题的时候，把它拆分为2部分，每一部分的规模可以缩小到n/4而非n/2，为此只需要花O(1)常数的时间
