update: dsa 23.md

--- a/dsa/contents/23.md
+++ b/dsa/contents/23.md
@@ -100,7 +100,9 @@ void print_result(int step) {
 
 // 开始尝试 false 停止
 bool go(State s, int step) {
-    printf("%d %d %d %d\n", s.h, s.w, s.s, s.v);
+    // 用于调试输出
+    // printf("%d %d %d %d\n", s.h, s.w, s.s, s.v);
+    
     // 判断是否合法
     if(invalid_state_check(s)) {
         return false;
@@ -114,7 +116,7 @@ bool go(State s, int step) {
     };
 
     // 判断是否已经尝试
-    if(passed[s.h][s.w][s.s][s.v] == true) {
+    if(passed[s.h][s.w][s.s][s.v]) {
         return false;
     };
 
