update: http 1.md

--- a/http/contents/1.md
+++ b/http/contents/1.md
@@ -24,6 +24,18 @@
 - 浏览器输入URL后HTTP请求返回的完整过程
     * 下图中每个节点都代表HTTP协议所做的事情
     * 每个节点都可以有一些优化的方法
+    * 在浏览器API中有一个Performance,它会记录下图的每个时间点
+    * 每个过程的时间消耗都会通过这个API来记录
+    * 开发者可以根据时间耗时的多少来做一些对应的优化，下面是具体的步骤
+    * 1 ) Redirect：在发起请求的一开始就要做一个Redirect, 因为浏览器可能记录这个地址已经永久跳转成新的地址了
+    * 所以，一开始浏览器需要判断是否需要Redirect，以及Redirect到哪里
+    * 2 ) App cache：看缓存，因为请求的资源，可能已经被缓存过了，所以要到App cache里找是否存在
+    * 如果没有缓存就要去实际的服务器上请求资源了
+    * 3 ) DNS查找：因为一般服务器对应的是一个域名, 域名要找到对应的ip地址才能访问资源
+    * 4 ) 创建TCP链接：有了ip地址之后，就要创建TCP链接，经过TCP三次握手，才能创建起来
+    * 如果是HTTPS的协议，创建HTTPS链接和TCP的三次握手又不一样，里面有保证数据传输安全的过程
+    * 5 ) Request：链接创建好了之后，就可以发送HTTP请求的数据包
+    * 6 ) Response：数据包发送之后，服务器接收到这个数据进行操作后返回响应内容，整个过程才算完成
 <div align="center">
     <img width="600" src="./screenshot/1.jpg">
     <br />
