--- a/http/contents/3.md
+++ b/http/contents/3.md
@@ -34,3 +34,35 @@
 - 抓包工具推荐：Wireshark
     * Wireshark是一个非常好用的抓包工具
     * 不仅能分析HTTP层面的，而且可以深入传输层和网络层
+
+### 关于URI,URL,URN
+
+**URI**
+
+- URI：Uniform Resource Identifier 统一资源标志符
+- URL是用来定义一个web网站具体的某个页面，但是从HTTP和Web的角度它的定义不仅仅只是如此
+- 在Web中不管是HTTP协议还是FTP协议，它们的目的就是为了找到某一个资源
+- URI就是用来唯一标识互联网上的信息资源而设置的，是一个包含URL和URN的一个统一定义
+
+**URL**
+
+- URL: Uniform Resource Locator 统一资源定位器
+- 示例：http://user:pass@host.com:80/path?query=string#hash
+    * `http://` 这是scheme，定义用怎样的协议来访问资源
+      * 这里的scheme有很多，比如ftp,mailto,https,ws
+      * 这些协议的服务方式不一样, 通过不同的协议访问服务，其解析的方式就会不一样
+    * `user:pass@` 表示所访问资源需要特殊的身份权限，在web开发中基本不会这样使用, 不安全且麻烦
+    * `host.com` 用于定位资源所在的服务器在互联网中的位置
+      * 定位可以是ip, 也可以是域名, 如果是域名要解析成ip才能定位到服务
+    * `:80` 端口，每台服务器都有很多端口, 可以跑很多软件的web服务, 80端口是默认端口，一个端口代表一个web服务
+    * `/path`: 路由，通过路由找到所需的内容, 同文件路径(面包屑), 更多时候用于辨别url所要请求的数据通过程序来判断而非直接请求的资源
+    * `query=string` 搜索参数
+    * `#hash` 用于定位某一个片段，也就是锚点，定位的工具，当然一些框架的hash会充当一部分路由功能
+- 这类格式都叫做URL,如ftp协议也是
+
+**URN**
+
+- URN 永久统一资源定位符
+- 一般URL所对应的资源如果被迁移了，那么很可能这个URL就会失效
+- URN解决了这个问题，如果资源被迁移了，可以通过URN访问到对应的资源，即在资源移动后还能被找到
+- 但是在目前没有一个成熟的使用方案和使用场景
