update: http 3.md

--- a/http/contents/3.md
+++ b/http/contents/3.md
@@ -66,3 +66,41 @@
 - 一般URL所对应的资源如果被迁移了，那么很可能这个URL就会失效
 - URN解决了这个问题，如果资源被迁移了，可以通过URN访问到对应的资源，即在资源移动后还能被找到
 - 但是在目前没有一个成熟的使用方案和使用场景
+
+### HTTP报文
+
+- 客户端主动发起请求后，服务端才会给我们响应
+- 格式
+    * a) 请求报文
+      * 起始行：GET /test/hi-there.txt HTTP/1.0
+        * 包含一个method, method有各自的语义, 可以不遵守，但最好遵守
+        * 包含一个url, 比如路由什么的
+        * 包含一个协议和版本
+      * 首部：Accept: text/* , Accept-Language: en, fr
+    * b) 响应报文
+      * 起始行：HTTP/1.0 200 OK
+      * 首部：Content-type: text/plain, Content-length: 19
+      * 主体：Hi! I'm response body!
+- 注意: 格式中起始行和首部是分开的，并且首部和主体的区分是中间有一个空行
+
+### HTTP方法
+
+- 用于定义对资源的操作
+- 常用的: Get, Post, Delete, Put
+- 不常用的：Patch, Head等
+- 同一个URL针对不同的Method来进行区分不同的功能，这样API接口的设计会更规范
+- 从定义上有各自的语义，如何实现取决于开发者
+
+### HTTP CODE
+
+- 定义服务器对请求的处理结果，这个结果是处理成功的，还是重定向的，还是请求或响应存在问题等
+- 各个区间的code有各自的含义
+    * 100 ~ 199 代表操作要持续进行，接下去要去做一些其他的事情，请求才能继续返回给你
+    * 200 ~ 299 代表操作是成功的
+    * 300 ~ 399 代表操作要去做重定向，用别的方式去获取数据, 如：301,302永久临时重定向等
+    * 400 ~ 499 代表发送请求有问题，如：401权限认证问题
+    * 500 ~ 599 代表服务器出现的错误
+- 一个好的HTTP服务是可以通过CODE来判断结果的
+    * 实现了一个非常好的HTTP服务是可以很直观的从CODE中看到的
+    * 现在很多国内WEB开发人员只用两种200和500和一些说明的数据，这种其实不是很规范
+    * 要尽量遵照HTTP的语义化来开发
