update: http 3.md

--- a/http/contents/3.md
+++ b/http/contents/3.md
@@ -104,3 +104,19 @@
     * 实现了一个非常好的HTTP服务是可以很直观的从CODE中看到的
     * 现在很多国内WEB开发人员只用两种200和500和一些说明的数据，这种其实不是很规范
     * 要尽量遵照HTTP的语义化来开发
+
+### HTTP信息传输示例
+
+- 使用nodejs来实现一个最简单的HTTP服务
+
+```js
+// server.js
+const http = require('http');
+
+http.createServer((req, res) => {
+    console.log('req come: ', req.url);
+    res.end('req come: ' + req.url);
+}).listen(8000,() => {
+    console.log('server is running');
+});
+```
