update: http 13.md

--- a/http/contents/13.md
+++ b/http/contents/13.md
@@ -6,10 +6,22 @@
 - Nginx的主要功能是用于HTTP的代理，主要提供：load balancing, caching, cloud deployments等功能
 - 可使用lua来扩展相关功能
 - windows平台下载地址：https://nginx.org/en/download.html
-- mac平台安装：通过Homebrew, $ `brew install nginx` 会默认安装在 `/usr/local/etc/nginx`
-- 进入安装目录，或者配置好环境变量，启动nginx: $ `nginx` 或者 $ `./nginx.exe`
+- mac平台安装：通过Homebrew, $ `brew install nginx` 会默认安装在 `/usr/local/nginx/sbin`
+    * 或者通过https://nginx.org/en/download.html 下载，之后顺序执行
+        * $ `./configure`
+        * $ `install`
+        * $ `make install`
+        * $ `/usr/local/nginx/sbin/nginx -v`
+- 进入安装目录，或者配置好环境变量，启动nginx: $ `cd /usr/local/nginx/sbin & sudo ./nginx` 或者 $ `./nginx.exe`
 - 访问 http://localhost 可以看到 Welcome to nginx! 的欢迎语，这样就成功启动了
 - 成功之后，就可以修改配置，用nginx来代理我们自己开发的服务
+- 同样的, 检查，重启和关闭
+    * 检查 $ `./nginx -t`
+    * 重启 $ `./nginx -s reload`
+    * 关闭
+        * 查询nginx主进程号：$ `ps -ef|grep nginx`
+        * 正常关闭 $ `sudo kill -QUIT 主进程号`
+        * 快速关闭 $ `sudo kill -TERM 主进程号`
 
 ### nginx的相关功能
 
