update: http 13.md

--- a/http/contents/13.md
+++ b/http/contents/13.md
@@ -12,8 +12,10 @@
         * $ `install`
         * $ `make install`
         * $ `/usr/local/nginx/sbin/nginx -v`
-- 进入安装目录，或者配置好环境变量，启动nginx: $ `cd /usr/local/nginx/sbin & sudo ./nginx` 或者 $ `./nginx.exe`
-- 访问 http://localhost 可以看到 Welcome to nginx! 的欢迎语，这样就成功启动了
+- 进入安装目录，或者配置好环境变量，启动nginx
+    * Mac环境：$ `cd /usr/local/nginx/sbin & sudo ./nginx` 
+    * Windows环境：$ `./nginx.exe`
+- 访问 http://localhost 可以看到 **Welcome to nginx!** 的欢迎语，这样就成功启动了
 - 成功之后，就可以修改配置，用nginx来代理我们自己开发的服务
 - 同样的, 检查，重启和关闭
     * 检查 $ `./nginx -t`
