update: http 15.md

--- a/http/contents/15.md
+++ b/http/contents/15.md
@@ -34,3 +34,67 @@
     * 这个过程中涉及到一个加密套件进行算法的操作
 - 中间任何人都无法获取和破解这个主密钥，后期传输的数据全是由这个主密钥来加密和解密
 - 所以HTTPS传输是一个安全的传输协议，可以自己使用Wireshark等抓包软件看这个过程
+
+### 使用Nginx来部署一个HTTPS的服务
+
+- 要部署HTTPS服务，首先要生成HTTPS的公钥(public key)和私钥(private key)
+    * Windows下一般需要在nginx安装目录/certs 目录中生成
+    * Mac下要在一个目录下生成，并使用绝对路径来引用
+    * 证书生成命令: $ `openssl req -x509 -newkey rsa:2048 -nodes -sha256 -keyout localhost-privkey.pem -out localhost-cert.pem`
+    * 一路回车下去即可，不需要特别配置
+    * 在这里会生成两个文件：localhost-cert.pem,localhost-privkey.pem
+- 生成好之后，需要在nginx中来配置
+    ```conf
+    proxy_cache_path cache levels=1:2 keys_zone=my_cache:10m
+
+    server {
+        listen                  443;
+        server_name             test.com;
+        ssl                     on;
+        ssl_certificate         ../certs/localhost-cert.pem
+        ssl_certificate_key     ../certs/localhost-privkey.pem
+
+        location / {
+            proxy_cache      my_cache
+            proxy_pass       http://127.0.0.1:8000;
+            proxy_set_header Host $host;
+        }
+    }
+    ```
+- 注意HTTPS默认使用端口443
+- ssl_certificate对应的是公钥
+- ssl_certificate_key对应的是私钥
+- 上述配置是Windows下的配置，配置好之后，这个nginx就支持了HTTPS，重启nginx
+- 启动对应的nodejs的服务，使用浏览器访问：https://test.com
+- 这时候有个红色的提示：您的连接不是私密连接，这个时候就证明了https可以访问了
+    * 提示红色的原因是，目前主流浏览器在验证https安全证书的时候，都要权威机构来签发
+    * 权威机构签发时要先验证域名是合法的，安全的
+    * 一般个人会使用certbot来签发, 此处不再赘述
+    * 这时候，因为我们是测试，直接点击高级，选择继续前往test.com(不安全)
+- 能够正常访问，说明我们的https的服务部署成功了
+- 如果我们要在访问http的时候，自动跳转到https，可以如下配置
+    ```conf
+    proxy_cache_path cache levels=1:2 keys_zone=my_cache:10m
+
+    server {
+        listen                  80 default_server;
+        listen                  [::]:80 default_server;
+        server_name             test.com
+        return 302 https://$server_name$request_uri;
+    }
+
+    server {
+        listen                  443;
+        server_name             test.com;
+        ssl                     on;
+        ssl_certificate         ../certs/localhost-cert.pem
+        ssl_certificate_key     ../certs/localhost-privkey.pem
+
+        location / {
+            proxy_cache      my_cache
+            proxy_pass       http://127.0.0.1:8000;
+            proxy_set_header Host $host;
+        }
+    }
+    ```
+- 重启nginx, 重新访问http页面，即可立即跳转到https网页
