update: http 14.md

--- a/http/contents/14.md
+++ b/http/contents/14.md
@@ -25,6 +25,7 @@
             }
             ```
           * 这时候代理已经配置成功了，然后我们重启nginx后进行使用
+          * 特别注意，针对我们的server_name，本机也要进行一些host的配置，此处不再赘述
 
 ### 程序示例
 
