update: http 15.md

--- a/http/contents/15.md
+++ b/http/contents/15.md
@@ -61,7 +61,8 @@
         }
     }
     ```
-- 注意HTTPS默认使用端口443
+- 特别注意，针对我们的server_name，本机也要进行一些host的配置，此处不再赘述
+- HTTPS默认使用端口443
 - ssl_certificate对应的是公钥
 - ssl_certificate_key对应的是私钥
 - 上述配置是Windows下的配置，配置好之后，这个nginx就支持了HTTPS，重启nginx
