update: http 16.md

--- a/http/contents/16.md
+++ b/http/contents/16.md
@@ -88,8 +88,8 @@ server {
   }
 }
 ```
-
-- 注意现在的HTTP2基于HTTPS, 虽然在HTTP2的协议定义中没有指定一定要使用HTTPS
+- 特别注意，针对我们的server_name，本机也要进行一些host的配置，此处不再赘述
+- 现在的HTTP2基于HTTPS, 虽然在HTTP2的协议定义中没有指定一定要使用HTTPS
 - 但是HTTP2是由谷歌开发的SPDY协议演化而来的, 而SPDY协议需要HTTPS
 - 所以目前HTTP2只能在HTTPS的基础上使用
 - 所以上述配置中 `listen       443 http2` 是规定的写法
